--- a/clg-web-main/Frontend/src/styles/Contact.css
+++ b/clg-web-main/Frontend/src/styles/Contact.css
@@ -1,17 +1,11 @@
 /* Contact Page Styles */
 
-.sectionHeader {
+.sectionHeader{
  text-align: center;
-  margin-bottom: 50px;
-  padding: 40px 20px;
-  background: #daeef7;
-  color: #b81616;
-  border-radius: 20px;
-  max-width: calc(100% - 40px);
-  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
-  margin-top: 20px;
-  margin-left: 20px;
   font-size: 2.5rem;
+  margin-bottom: 10px;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+  color: #b81616;
 }
 
 .heading {
@@ -116,6 +110,12 @@
 .submit:hover {
   background: #0056b3;
 }
+
+/* .maps-wrapper {
+  display: flex;
+  flex-direction: column; /* vertical stack */
+  /* gap: 20px;  
+}  */
 
 .map-container {
   flex: 1;
@@ -268,24 +268,28 @@
   .text .para {
     font-size: 0.95em;
   }
-}
 
-@media (max-width: 480px) {
-  .sectionHeader {
-    padding: 30px 15px;
-    margin-left: 10px;
-    max-width: calc(100% - 20px);
+  .sectionHeader h4{
     font-size: 2rem;
   }
 
-  .heading {
+  .sub-heading{
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .sectionHeader h4{
     font-size: 1.8rem;
+  }
+
+  .heading {
+    font-size: 1.5rem;
     margin: 15px 0;
   }
 
   .sub-heading {
-    font-size: 1.1em;
-    margin: 12px 0;
+    font-size: 1rem;
   }
 
   .para {
@@ -341,6 +345,3 @@
     margin: 4px 0;
   }
 }
-
-
-
